// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard debe mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Hola mundo
  </h1>
</div>
`;

exports[`ProductCard debe mostrar el componente correctamente 2`] = `
<div
  className="productCard undefined"
>
  <h1>
    Hola mundo
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;
